# HOW TO PUBLISH...
#
# Prep Work (ensure need modules are up-to-date):
#   sudo pacman -Syu python-pip
#   sudo pacman -Syu python-build
#   sudo pacman -Syu python-twine
#   -- antiquated way
#      python3 -m pip install --upgrade pip
#      python3 -m pip install --upgrade build
#      python3 -m pip install --upgrade twine
# 
# PUBLIC Build and deploy (from project directory):
#   ## BUMP the version (below in [project])
#   rm -r dist; python3 -m build; ls dist/.
#   python3 -m twine upload dist/*
#     ## Enter __token__ and the saved TOKEN (in bitwarden)
#   pipx upgrade my-snaps || pipx install my-snaps # >= python3.11
#   --OR-- sudo python3 -m pip install my-snaps # <= python3.10
#   ## VISIT  https://pypi.org/project/my-snaps and delete old versions
#
# TEST Build and test (from project directory):
#   ## BUMP the version (below in [project])
#   rm -r dist; python3 -m build
#   python3 -m twine upload --repository testpypi dist/*
#     ## Enter __token__ and the saved TOKEN (in bitwarden)
#   sudo python3 -m pip install --upgrade --index-url https://test.pypi.org/simple/ --no-deps --break-system-packages my-snaps
#   ## VISIT  https://test.pypi.org/project/my-snaps and delete old versions

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "1.0.2"
name = "my-snaps"
authors = [
    {name = "Joe Defen", email = "joedef@gmail.com"},
]
description = "Simple BTRFS Snapshot Tools"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["BTRFS", "snapshot", "restore"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    'importlib-metadata; python_version<"3.8"',
]

[project.scripts]
my-snaps = "my_snaps.my_snaps:run"
my-restore = "my_snaps.my_restore:run"

[tool.hatch.build.targets.wheel]
packages = ["my_snaps"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/my_snaps/__pycache__",
]

[project.urls]
"Homepage" = "https://github.com/joedefen/my-snaps"
"Bug Tracker" = "https://github.com/joedefen/my-snaps/issues"
